<resources>
    <string name="app_name">DCSDR</string>
    <string name="title_activity_main">Diplomatic Center</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_display_articles">DisplayArticlesActivity</string>
    <string name="error_timeout">No Internet Connection.</string>
    <string name="auth_failure">Authorization failed.</string>
    <string name="server_error">Server error.</string>
    <string name="network_error">Network error.</string>
    <string name="parse_error">Parse error.</string>
    <string name="title_activity_article_reader">Reader</string>
    <string name="title_activity_about_us">Diplomatic Center</string>
    <string name="about_us_p1">We are a thinking and strategic research center established in Doha in 2014. We are concerned with monitoring, analyzing, assessing, and studying the political, strategic, and economic transformation in the Gulf region, in addition to the international and regional interactions affecting the region. All these process are conducted with regard to the level of internal developments, regional relations, and international trends by means of scientific activities that are concerned with the interactions with the decision-making circles and influential institutions in the region’s countries by providing analyses, assessments, and consultations and establishing an effective communication channels among experts, intellectuals, and officials.</string>
    <string name="about_us_p2">Among its services, the center is concerned with providing consultations to researchers and officials in the decision-making institutions at the various national, regional, and international levels. Moreover, we offer our services to international organizations and major companies operating in the region in addition to opinion leaderships in the various countries and those interested in the general developments in the Gulf region as well as the different media agencies.</string>
    <string name="PARENT_CLASS_TAG">ParentClassName</string>
    <string name="DISPLAY_FRAGMENT_TAG">DisplayArticleListFragment</string>
    <string name="DISPLAY_FRAGMENT_PARENT_TAG">CategoryListFragment</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyA_jeya-iT2Q9TvKFYTVZoOrhJC_ixlcEo
    </string>
    <string name="RESEARCH_AND_STUDIES"><![CDATA[Research & Studies]]></string>
    <string name="EXPAND">EXPAND</string>
    <string name="COLLAPSE">COLLAPSE</string>
    <string name="title_activity_contact_us">Diplomatic Center</string>
    <string name="title_activity_home_page">DCSDR</string>
    <string name="title_activity_authors">Authors</string>
    <string name="APP_TITLE">Diplomatic Center</string>
    <string name="ALL_RESEARCH_AND_STUDIES"><![CDATA[All Research & Studies]]></string>
    <string name="STUDIES">Studies</string>
    <string name="POLITICAL_STUDIES">Political Studies</string>
    <string name="STRATEGIC_STUDIES">Strategic Studies</string>
    <string name="ECONOMIC_STUDIES">Economic Studies</string>
    <string name="ENERGY_STUDIES">Energy Studies</string>
    <string name="POLICIES_ANALYSIS">Policies Analysis</string>
    <string name="INTERNAL_POLICY">Internal Policy</string>
    <string name="FOREIGN_POLICY">Foreign Policy</string>
    <string name="ECONOMIC_POLICY">Economic Policy</string>
    <string name="POSITION_PAPERS">Position Papers</string>
    <string name="POLITICAL_ESTIMATES">Political Estimates</string>
    <string name="STRATEGIC_ESTIMATES">Strategy Estimates</string>
    <string name="ECONOMIC_ESTIMATES">Economic Estimates</string>
    <string name="PUBLICATIONS">Publications</string>
    <string name="ALL_PUBLICATIONS">All Publications</string>
    <string name="RESEARCH_AND_STUDIES_PUBLICATIONS"><![CDATA[Research & Studies]]></string>
    <string name="ARBITRATION_STUDIES">Arbitration Studies</string>
    <string name="POLICY_ANALYSIS">Policy Analysis</string>
    <string name="POSITION_ESTIMATES">Position Estimates</string>
    <string name="BOOKS">Books</string>
    <string name="LITERATURE_BOOKS">Literature Books</string>
    <string name="TRANSLATED_BOOKS">Translated Books</string>
    <string name="EDITOR_BOOKS">Editor Books</string>
    <string name="REPORTS_AND_PERIODICALS"><![CDATA[Reports & Periodicals]]></string>
    <string name="MEDIA_REPORTS">Media Reports</string>
    <string name="TREND_ANALYSIS_REPORTS">Trend Analysis Reports</string>
    <string name="STRATEGIC_REPORTS">Strategic Reports</string>
    <string name="DISPUTES_RESOLUTION">Disputes Resolution</string>
    <string name="ALL_DISPUTES_RESOLUTION">All Disputes Resolution</string>
    <string name="INTERNATIONAL_NEGOTIATIONS">International Negotiations</string>
    <string name="PRINCIPLES_OF_NEGOTIATIONS">Principles of Negotiations</string>
    <string name="ART_OF_DIPLOMACY">Art of Diplomacy</string>
    <string name="INTERNATIONAL_ARBITRATION">International Arbitration</string>
    <string name="MEDIATION">Mediation</string>
    <string name="CONFLICT_ANALYSIS">Conflict Analysis</string>
    <string name="ETHNIC_CONFLICTS">Ethnic Conflicts</string>
    <string name="RELIGIOUS_CONFLICTS">Religious Conflicts</string>
    <string name="POLITICAL_CONFLICTS">Political Conflicts</string>
    <string name="ECONOMIC_CONFLICTS">Economic Conflicts</string>
    <string name="RISK_REGISTER">Risk Register</string>
    <string name="SECURITY_RISKS">Security Risks</string>
    <string name="ENVIRONMENTAL_RISKS">Environmental Risks</string>
    <string name="POLITICAL_RISKS">Political Risks</string>
    <string name="ECONOMIC_RISKS">Economic Risks</string>
    <string name="PEACE_BUILDING_AND_KEEPING"><![CDATA[Peace Keeping & Building]]></string>
    <string name="PEACE_KEEPING_CHARTERS">Peace Keeping Charters</string>
    <string name="PEACE_KEEPING">Peace Keeping</string>
    <string name="EXPERIENCES_OF_PEACE_KEEPING">Experiences of Peace Keeping</string>
    <string name="EXPERIENCES_OF_PEACE_BUILDING">Experiences of Peace-Building</string>
    <string name="ALL_PROGRAMS_AND_PROJECTS"><![CDATA[All Programs & Projects]]></string>
    <string name="PROGRAMS_AND_PROJECTS"><![CDATA[Programs & Projects]]></string>
    <string name="RESEARCH_PROJECTS">Research Projects</string>
    <string name="ALL_RESEARCH_PROJECTS">All Research Projects</string>
    <string name="RESEARCH_FILES">Research Files</string>
    <string name="ALL_RESEARCH_FILES">All Research Files</string>
    <string name="LEADERSHIP_BUILDING_PROJECTS">Leadership Building</string>
    <string name="ALL_LEADERSHIP_BUILDING_PROJECTS">All Leadership Building</string>
    <string name="EVENTS">Events</string>
    <string name="FEASABILITY_STUDIES_PROJECTS">Feasibility Studies</string>
    <string name="ALL_FEASABILITY_STUDIES">All Feasibility Studies</string>
    <string name="ALL_EVENTS">All Events</string>
    <string name="THE_CULTURAL_SALON">The Cultural Salon</string>
    <string name="ALL_CULTURAL_SALON">All Cultural Salon</string>
    <string name="DCSS_NEWS">Dcss News</string>
    <string name="ALL_DCSS_NEWS">All Dcss News</string>
    <string name="SYMPOSIUMS">Symposiums</string>
    <string name="ALL_SYMPOSIUMS">All Symposiums</string>
    <string name="CONFERENCES">Conferences</string>
    <string name="ALL_CONFERENCES">All Conferences</string>
    <string name="ID_LEVEL_URL">http://www.dcsdr.qa/api/xml_en_show_post_by_category_id.php?id=</string>
    <string name="CAT_TITLE_TAG">CAT_TITLE</string>
    <string name="NIGHT_MODE">Night Mode</string>
    <string name="DAY_MODE">Day Mode</string>
    <string name="ABOUT_US">About Us</string>
    <string name="FRAGMENTS_ADDRESS">qa.dcsdr.diplomaticclub.Fragments.</string>
    <string name="ALL_FEATURED">Featured Posts</string>
    <string name="FEATURED_RESEARCH_AND_STUDIES"><![CDATA[Featured Research & Studies]]></string>
    <string name="FEATURED_PUBLICATIONS">Featured Publications</string>
    <string name="FEATURED_DISPUTES_RESOLUTION">Featured Disputes Resolution</string>
    <string name="FEATURED_PROGRAMS_AND_PROJECTS"><![CDATA[Featured Programs & Projects]]></string>
    <string name="FEATURED_EVENTS">Featured Events</string>
    <string name="READ_MORE">READ MORE</string>
    <string name="SHOW_AUTHOR_ARTICLES_URL">http://www.dcsdr.qa/api/xml_en_show_post_by_writer_id.php?id=</string>
    <string name="AUTHOR_LIST_URL">http://www.dcsdr.qa/api/xml_en_show_writer.php</string>
    <string name="SINGLE_ARTICLE_ID">http://www.dcsdr.qa/api/xml_en_show_post_id.php?id=</string>
    <string name="SHOW_PAPERS">SHOW PAPERS</string>
    <string name="SHARE">SHARE</string>
    <string name="SHARE_LC">Share</string>
    <string name="NEXT_ARTICLE">NEXT ARTICLE</string>
    <string name="PREVIOUS_ARTICLE">PREVIOUS ARTICLE</string>
    <string name="LARGER_TEXT">Larger Text</string>
    <string name="SMALLER_TEXT">Smaller Text</string>
    <string name="RESET_SIZE">Reset Size</string>
    <string name="JUMP_TO_BOTTOM">Jump to Bottom</string>
    <string name="JUMP_TO_TOP">Jump to Top</string>
    <string name="CONTACT_US">Contact Us</string>
    <string name="FIND_US">Find us here.</string>
    <string name="QUESTIONS_COMMENTS">Any questions or comments? Contact us below.</string>
    <string name="FORM_NAME">Your Name</string>
    <string name="FORM_EMAIL">Your E-mail</string>
    <string name="YOUR_MESSAGE">Your Message</string>
    <string name="FORM_MESSAGE">Message Subject</string>
    <string name="FORM_SUBMIT">Submit</string>
    <string name="PLEASE_ENTER_NAME">Please enter your name.</string>
    <string name="PLEASE_ENTER_EMAIL">Please enter your E-mail.</string>
    <string name="PLEASE_ENTER_EMAIL_CORRECT">Please enter a correct E-mail.</string>
    <string name="PLEASE_ENTER_SUBJECT">Please enter a subject.</string>
    <string name="PLEASE_ENTER_MESSAGE">Please enter a message.</string>
    <string name="EXIT_MESSAGE">Are you sure you want to exit DCSDR?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="RETRY">RETRY</string>
    <string name="NO_ARTICLES_FOUND">NO ARTICLES FOUND.</string>
    <string name="title_settings">Settings</string>
    <string name="CATEGORY">CATEGORIES</string>
    <string name="HOME">Home</string>
    <string name="AUTHORS">Authors</string>
    <string name="CATEGORIES">Categories</string>
    <string name="BOOKMARKS">Bookmarks</string>
    <string name="SETTINGS">Settings</string>
    <string name="NO_CATEGORIES">No categories selected</string>
    <string name="LANGUAGE">Language</string>
    <string name="LANGUAGE_DIALOG">Change the language of the app.</string>
    <string name="ENGLISH">en</string>
    <string name="LANGUAGE_SETTINGS">APP LANGUAGE</string>
    <string name="CHANGE_LANG_SUMMARY">Change the language of the app below.</string>
    <string name="CATEGORY_MESSAGE">Select the Categories you will see in the navigation drawer.</string>
    <string name="DCSDR">DCSDR</string>
    <string name="VERSION_SUMMARY">Diplomatic Center for Studies of Disputes Resolution, Version: 1.3.0</string>
    <string name="NO_ARTICLES">NO ARTICLES FOUND.</string>
    <string name="DELETE_BOOKMARK_BUTTON">REMOVE</string>
    <string name="vision_and_message">Vision and Message</string>
    <string name="objectives">Objectives</string>
    <string name="areas_of_interest">Areas of Interest</string>
    <string name="chairman">Chairman</string>
    <string name="advisory_council">Advisory Council</string>
    <string name="center_associates">Center Associates</string>
    <string name="services">Services</string>
    <string name="OVERVIEW">Overview</string>
</resources>