<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="qa.dcsdr.diplomaticclub.Activities.ArticleReader">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/top"
        android:orderInCategory="100"
        android:title="@string/JUMP_TO_TOP"
        app:showAsAction="never" />
    <item
        android:id="@+id/bottom"
        android:orderInCategory="100"
        android:title="@string/JUMP_TO_BOTTOM"
        app:showAsAction="never" />
    <item
        android:id="@+id/increase"
        android:icon="@android:drawable/btn_plus"
        android:orderInCategory="100"
        android:title="@string/LARGER_TEXT"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/decrease"
        android:icon="@android:drawable/btn_minus"
        android:orderInCategory="100"
        android:title="@string/SMALLER_TEXT"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/night_mode"
        android:icon="@android:drawable/btn_minus"
        android:orderInCategory="100"
        android:title="@string/NIGHT_MODE"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/default_size"
        android:orderInCategory="100"
        android:title="@string/RESET_SIZE"
        app:showAsAction="never" />

</menu>
