<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/about_us_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="qa.dcsdr.diplomaticclub.Activities.AboutUsActivity">


        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <ScrollView
            android:id="@+id/auSV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar">

            <RelativeLayout
                android:id="@+id/aboutUsImageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/aboutUsImage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimaryDark"
                    android:paddingTop="-2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/publications_cat_compressed" />

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/aboutUsImage"
                    android:background="#99000000"
                    android:fontFamily="sans-serif-light"
                    android:gravity="bottom"
                    android:padding="10dp"
                    android:text="@string/ABOUT_US"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/aboutUs"
                    android:animateLayoutChanges="false"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="A"
                        android:text="@string/OVERVIEW"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/overview_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="A"
                            android:textSize="15sp"
                            android:visibility="gone" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/vision_and_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:tag="B"
                        android:text="@string/vision_and_message"
                        android:textColor="@color/colorPrimary"

                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/vision_and_message_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="B"
                            android:textSize="15sp"
                            android:visibility="gone" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/objectives"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="C"
                        android:text="@string/objectives"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">


                        <TextView
                            android:id="@+id/objectives_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="C"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/areas_of_interest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="D"
                        android:text="@string/areas_of_interest"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">


                        <TextView
                            android:id="@+id/areas_of_interest_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="D"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/chairman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="E"
                        android:text="@string/chairman"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">


                        <TextView
                            android:id="@+id/chairman_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="E"
                            android:textSize="15sp"
                            android:visibility="gone" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/advisory_council"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="F"
                        android:text="@string/advisory_council"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">


                        <TextView
                            android:id="@+id/advisory_council_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="F"
                            android:textSize="15sp"
                            android:visibility="gone" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/center_associates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="G"
                        android:text="@string/center_associates"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">


                        <TextView
                            android:id="@+id/center_associates_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="G"
                            android:textSize="15sp"
                            android:visibility="gone" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/services"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="sans-serif-light"
                        android:onClick="switchTitle"
                        android:tag="H"
                        android:text="@string/services"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/services_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:tag="H"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>


    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="qa.dcsdr.diplomaticclub.Fragments.NavigationDrawerFragment"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer">

    </fragment>

</android.support.v4.widget.DrawerLayout>
