<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:paddingBottom="20dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/PlistIconViewU"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
           android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/default_art_image" />

        <ImageView
            android:id="@+id/imageLocal"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/default_art_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ff093860"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/PlistItemU"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="8dp"
            android:text="Title"
            android:textColor="#ff000000"
            android:textSize="20sp"/>


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/PauthorTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Dr. Jack"
            android:textColor="#ff434343"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="NewApi">

        </TextView>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/article_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:text="This is a sample abstract that is full of randomness and ..."
            android:textColor="#ff000000"
            android:textSize="14sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingBottom="6dp"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/readMoreButton"
                style="android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/custom_bg"
                android:gravity="center"
                android:text="@string/READ_MORE"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                style="android:attr/borderlessButtonStyle"
                android:id="@+id/shareArticle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_bg"
                android:gravity="center"
                android:text="@string/SHARE"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                style="android:attr/borderlessButtonStyle"
                android:id="@+id/deleteBookmark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_bg"
                android:gravity="center"
                android:text="@string/DELETE_BOOKMARK_BUTTON"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/shareArticle"
                android:layout_alignTop="@+id/shareArticle" />

        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
